# Mql5code

./: README.md  pyproject.toml  tradlint.toml
.github/workflows/: ci.yml
src/tradlint/: analyzer.py  cli.py  config.py  formatters.py  models.py
src/tradlint/rules/: __init__.py  base.py  mql_generic.py
tests/: test_smoke.py
tests/fixtures/: bad_ea.mq5  safe_ea.mq5
