[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradlint"
version = "0.1.0"
description = "Static linter/auditor for trading bots, starting with MQL4/MQL5 EAs"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }
dependencies = []

[project.scripts]
tradlint = "tradlint.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
